# lightkv

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO
.mimocode/: .cron-lock
clients/csharp/LightKV/: LightKV.csproj  LightKVClient.cs
clients/go/: bench_test.go  client.go  client_test.go  go.mod  pipeline_bench_test.go  pool.go  stress_concurrent_test.go  stress_test.go
clients/java/: pom.xml
clients/java/src/main/java/lightkv/: LightKVClient.java
clients/java/src/test/java/lightkv/: LightKVClientTest.java  ManualTest.java
clients/nodejs/: package.json
clients/nodejs/src/: client.js  pool.js
clients/nodejs/test/: bench.js  bench_pipeline.js  stress.js  stress_concurrent.js  test.js
clients/python/: pyproject.toml
clients/python/lightkv/: client.py  pool.py
clients/python/tests/: bench.py  bench_pipeline.py  bench_vs_redis.py  stress.py  stress_concurrent.py  stress_vs_redis.py  test_client.py
clients/rust/: Cargo.toml
clients/rust/src/: lib.rs
clients/rust/tests/: integration_test.rs
docs/: Client-SDK-API-文档.md  LightKV API接口文档.md  LightKV.md  LightKV性能优化报告.md  LightKV性能测试报告.md  LightKV支持Redis全量命令与数据类型的架构演进分析.md  LightKV示例代码.md  LightKV详细设计文档.md  phase_fixes.md  raft升级完善方案.md  v2.0_设计草案.md  主从复制设计.md  代码地图.md  代码审查未修复问题清单.md  分布式KV数据库可行性分析.md  生产环境部署优化设计.md  生产环境部署指南.md  集群部署与测试指南.md
include/lightkv/: block.h  block_builder.h  block_handle.h  bloom_filter.h  c_api.h  cache.h  client.h  cluster.h  compaction.h  config.h  db.h  db_impl.h  encoding.h  manifest.h  memtable.h  migrate.h  options.h  raft.h  raft_server.h  rate_limiter.h  server.h  skiplist.h  slice.h  sstable.h  status.h  table_builder.h  transaction.h  vlog.h  wal.h  watch.h  zset_index.h
scripts/: run_full_test.sh
src/: block.cpp  block_builder.cpp  block_handle.cpp  bloom_filter.cpp  c_api.cpp  cache.cpp  client.cpp  cluster.cpp  compaction.cpp  config.cpp  db_impl.cpp  iterator.cpp  manifest.cpp  memtable.cpp  migrate.cpp  raft.cpp  raft_server.cpp  server.cpp  slice.cpp  sstable.cpp  status.cpp  table_builder.cpp  transaction.cpp  vlog.cpp  wal.cpp  watch.cpp  zset_index.cpp
tests/: CMakeLists.txt  bench_cpp.cpp  bench_pipeline_cpp.cpp  benchmark_test.cpp  block_test.cpp  bloom_test.cpp  db_test.cpp  memtable_test.cpp  run_server.cpp  run_server_st.cpp  skiplist_test.cpp  sstable_test.cpp  stress_cpp.cpp  test_auth.cpp  test_geo.cpp  test_p0_cmds.cpp  test_p1_cmds.cpp  test_p2_cmds.cpp  test_server.cpp  test_zset.cpp  wal_test.cpp
tools/: migrate_main.cpp  server_main.cpp
