[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lightkv-client"
version = "1.0.0"
description = "Python client SDK for LightKV (Redis RESP protocol compatible)"
requires-python = ">=3.7"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest"]
